--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
                                 <div id="toptitle">
                                         <h1>Dingcheng Yang &nbsp;</div>
 
-                                <h3>Ph.D. Candidate</h3>
+                                <h3>Algorithm Engineer</h3>
+
                                 <p>
-                                        Room 8-408, East Main Building <br>
-                                        Dept. of Computer Science and Technology<br>
-                                        Tsinghua University <br>
-                                        Beijing, China, 100084.<br>
-                                        <br>
-Email:  <a href="mailto:ydc19@mails.tsinghua.edu.cn">ydc19@mails.tsinghua.edu.cn</a><br>
+                                        Room 2308, Bio-Island International Apartments<br>
+                                        WeRide <br>
+                                        Guangzhou, China, 510320.<br>
+                                <br>
+Email:  <a href="mailto:dingcheng.yang@realai.ai">dingcheng.yang@realai.ai</a><br>
 Github: <a href="https://github.com/ydc123">ydc123</a> <br>
 <a href="cv/resume.pdf">[Curriculum Vitae]</a> 
+<a href="https://scholar.google.com/citations?user=NY-X0gvmA2gC&hl=zh-CN">[Google Scholar]</a> 
                                         <br>
                                 </p>
                         </td>
@@ -38,13 +39,13 @@ Github: <a href="https://github.com/ydc123">ydc123</a> <br>
 </table>
 <h2>Biography</h2>
 <p>
-        I received my B.E. degree from the Department of Computer Science and Technology, Tsinghua University, in 2019.
+        I received my Ph.D. from Tsinghua University in 2024, where I was fortunate to be advised by Prof. <a href="https://numbda.cs.tsinghua.edu.cn/~yuwj/">Wenjian Yu</a>. During my Ph.D., I conducted research on adversarial attack/defense, AI4EDA, and deep neural network compression. Prior to this, I obtained my bachelor's degree from Tsinghua University in June 2019. I was an intern in the <a href="https://www.realai.ai/">RealAI</a> from November 2018 to December 2024.
     </p>
 
-    <p>Now, I am a fifth-year Ph.D. student of <a href="http://numbda.cs.tsinghua.edu.cn/index.html">Numbda</a> group in the Department of Computer Science and Technology, Tsinghua University, advised by Prof. Wenjian Yu.
+
+        <p> Now, I am an algorithm engineer at <a href="https://www.weride.ai/">WeRide</a>, focus on autonomous driving technologies.        </p>
 </p>
 
-        <p>My research interest includes adversarial attack/defense, and deep neural network compression.
 </p>
 
 <h2>Competitions</h2>
@@ -62,6 +63,15 @@ Github: <a href="https://github.com/ydc123">ydc123</a> <br>
 </ul>
 <h2>Publications</h2>
 <ul>
+   <li>
+        <a>On the multi-modal vulnerability of diffusion models</a>
+        <br>
+        Dingcheng Yang<sup>*</sup>, Yang Bai<sup>*</sup>, Xiaojun Jia, Yang Liu, Xiaochun Cao, and Wenjian Yu (<sup>*</sup> Equal contribution)
+        <br>
+        <strong>International Conference on Machine Learning (ICML) Workshop</strong>, Vienna, Austria, Jul. 2024
+         <a href="files/icml24TiFA.pdf">[paper]</a>
+         <a href="https://github.com/ydc123/MMP-Attack">[code]</a>
+   </li>
    <li>
          <a>Training better CNN models for 3-D capacitance extraction with neural architecture search</a> <br>
 	 Haoyuan Li<sup>*</sup>, <strong>Dingcheng Yang</strong><sup>*</sup> and Wenjian Yu (<sup>*</sup> Equal contribution)<br>
