--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Github: <a href="https://github.com/ydc123">ydc123</a> <br>
    <li>
         <a>On the multi-modal vulnerability of diffusion models</a>
         <br>
-        Dingcheng Yang<sup>*</sup>, Yang Bai<sup>*</sup>, Xiaojun Jia, Yang Liu, Xiaochun Cao, and Wenjian Yu (<sup>*</sup> Equal contribution)
+        <strong>Dingcheng Yang</strong><sup>*</sup>, Yang Bai<sup>*</sup>, Xiaojun Jia, Yang Liu, Xiaochun Cao, and Wenjian Yu (<sup>*</sup> Equal contribution)
         <br>
         <strong>International Conference on Machine Learning (ICML) Workshop</strong>, Vienna, Austria, Jul. 2024
         <br>
